src/app/pages/player/player.page.scss
.hide-toolbar{
  /*.hide-toolbar-wrapper{
    padding:44px 0;
    transition: padding 700ms;
  }*/

  &.hidden{
    .hide-toolbar-wrapper{
      padding:0;

      .slide-content{
        min-height: 100vh;
      }
    }
  }
}

.loader{
  position: fixed;
  top:50%;
  left:50%;
  transform: translate(-50%, -50%);
}

.reader{
  opacity: 1;
  transition: opacity .3s ease;
  &.loading{
    opacity: 0;
  }
  .page-action{
    position: absolute;
    bottom:0;
    height:40px;
    line-height: 40px;
    font-size: 40px;
    cursor: pointer;
    text-align: center;
    background: white;
    color:var(--ion-color-inria);

    &.page-prev{
      left:0;
      width:calc(50% - 20px);
    }

    &.page-next{
      right:0;
      width:calc(50% - 20px);
    }

    &.disable{
      opacity: .3;
    }

    &.menu{
      left:calc(50% - 20px);
      width: 40px;
      color:var(--ion-color-inria-blue);
    }
  }

  .reader-bookmark{
    position: fixed;
    top:0;
    right: 5px;
    font-size: 20px;
    color: var(--ion-color-light);

    .bookmarked{
      color: var(--ion-color-inria);
    }
  }
}

.pages-container{
  position: absolute;
  width:100%;
  height:100%;
  padding: 20px 0 40px 0;
  background: white;
}

.pages-wrapper{
  height: 100%;
  column-count: auto;
  column-gap:1px;
  column-rule: 1px solid #eee;
  word-wrap: break-word;
  transition: transform .3s ease;

  &.scrolling{
    transition: none;
  }
}

.page-content{
  position: relative;
  display:block;
  padding: 0 20px;
  background: white;

  -webkit-column-break-after: always;
  page-break-after: always;
  break-after: column;

  &-fs{
    display: block;
    width: 100%;
    height: 100%;

    -webkit-column-break-inside: avoid;
    page-break-inside: avoid;
    break-inside: avoid-column;

    -webkit-column-break-before: always;
    page-break-before: always;
    break-before: column;

    &-inner{
      position: absolute;
      top:0;
      left:20px;
      bottom:0;
      right:20px;
    }
  }

  &-cover{
  }

  &-chapter{
    .chapter-container{
      display: flex;
      flex-direction: column;
      position: relative;
      margin: 0;
      height: calc(100% - 20px);

      &.ios{
        transform: none;
      }
    }

    .title-wrapper{
      width: 100%;
      margin: 0 auto 0 -1em;
      padding: 5vh 0;
      background: var(--ion-color-inria);
      clip-path: polygon(0 0, 100% 10%, 100% 90%, 0 100%);

      .title-container {
        padding: 1em;

        .number{
          color: white;
        }

        .title {
          color: white;
          font-weight: 400;
          line-height: 1.2;
        }
      }
    }

    ion-card-content{
      display: flex;
      flex-direction: column;
      flex-grow: 1;
      justify-content: space-evenly;
      padding: 1em;
      overflow: auto;
    }

    ion-grid{
      display: flex;
      flex-grow: 0;
      margin: 0;

      ion-row{
        flex-grow: 1;
        align-items: center;
      }
    }

    .chapter-spec-icon{
      font-size: 2em;
      line-height: 1;
    }

    .chapter-spec-value{
      font-weight: 700;
    }

    .chapter-objectives{
      h4{
        display: inline-block;
        font-size: 1rem;
        font-weight: 700;
        margin: 1em;
        border-bottom: 3px solid var(--ion-color-inria);
      }

      .chapter-objective{
        margin-bottom: 1em;
      }

      ion-icon{
        display: inline-block;
        vertical-align: middle;
        font-size: 2em;
        width: 1em;
        margin-right: .5em;
        color: var(--ion-color-inria);
      }

      ion-text{
        display: inline-block;
        vertical-align: middle;
        width: calc(100% - 3em);
      }
    }

    @media (max-width: 340px){
      .title-wrapper{
        padding: 3vh 0;
      }

      .chapter-spec-value{
        font-size: .9em;
      }

      ion-grid{
        ion-row{
          margin: 0 -1em;
        }
      }
    }
  }

  &-video, &-assessment{
    overflow: hidden;
    ion-icon + h2 {
      margin-top: 0;
      margin-bottom: 1em;
    }
  }

  &-video{
    .page-content-fs-inner{
      display: flex;
      flex-direction: column;
    }

    video-player{
      display: flex;
      flex-direction: column;
      flex-grow:1;
      overflow: hidden;
    }
  }

  &-assessment{
    .page-content-fs-inner{
      display: flex;
      flex-direction: column;
    }
    ion-card{
      display: flex;
      flex-direction: column;
      flex-grow: 1;
      margin: 0 0 20px 0;
    }

    ion-card-content{
      display: flex;
      flex-direction: column;
      flex-grow: 1;
      overflow: hidden;
      p{
        flex-grow: 1;
        overflow: auto;
      }
    }

    .activity-specs{
      margin: 0;
      padding: .5em;
      font-size: 12px;

      ion-col{
        padding: 0;
      }

      ion-col:nth-child(1){
        border-right: 2px solid var(--ion-color-inria-blue);
      }
    }

    .activity-spec-icon{
      font-size: 2em;
      line-height: 1;
    }
  }

  .page-header{
    margin-bottom: 1em;
    border-bottom: 3px solid #d5d9de;
    ion-icon{
      display: inline-block;
      vertical-align: middle;
      width: 1em;
      margin-right: .5em;
      font-size: 2em;
    }

    h4{
      display: inline-block;
      vertical-align: middle;
      width: calc(100% - 3em);
      margin: 0;
      text-align: center;
    }
  }
}

